--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
@@ -9,7 +9,8 @@
     Layout = "~/Views/Shared/AdminMaster.cshtml";
 
 }
-@{clsFunction objcls = new clsFunction(); }
+
+@{ clsFunction objcls = new clsFunction(); }
 @if (objcls.Roles() == "A")
 {
     <div class="panel panel-info">
@@ -33,7 +34,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="/admin/StudentDetails">
+                            <a href="/Admin/ActiveMemberListForAdmin">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
@@ -77,7 +78,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#">
+                            <a href="/Member/VerifictionRemainList">
                                 <div class="panel-footer">
                                     <span class="pull-left">View Details</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
