--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
@@ -38,9 +38,9 @@
         }
         <div class="row">
             <div class="col-md-12">
-                <<div class="panel panel-info">
+                <div class="panel panel-info">
                     <div class="panel-heading">
-                        <h2><strong>Member Data Edit</strong></h2>
+                      <strong>Member Data Edit</strong>
                     </div>
                     <div class="panel-content">
                         <div class="row">
@@ -54,7 +54,7 @@
                                             <input class="form-control" name="MemberName" id="MemberName" value="@Html.Raw(Html.AttributeEncode(Model.MemberName))" type="text" placeholder="Enter MemberName">
                                             @Html.ValidationMessageFor(m => m.MemberName, "", new { @class = "text-danger" })
                                         </div>
-                                        <div class="form-group">
+                                        @*<div class="form-group">
                                             <label class="control-label">Email</label>
                                             <input class="form-control" name="Email" id="Email" value="@Html.Raw(Html.AttributeEncode(Model.Email))" type="text" placeholder="Enter Email">
                                             @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
@@ -63,11 +63,29 @@
                                             <label class="control-label">Password</label>
                                             <input class="form-control" name="Password" id="Password" value="@Html.Raw(Html.AttributeEncode(Model.Password))" type="text" placeholder="Enter Password">
                                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                        </div>
+                                        </div>*@
                                         <div class="form-group">
                                             <label class="control-label">Mobile No.</label>
                                             <input class="form-control" name="MobileNumber" id="MobileNumber" value="@Html.Raw(Html.AttributeEncode(Model.MobileNumber))" type="text" placeholder="Enter Mobile Number">
                                             @Html.ValidationMessageFor(m => m.MobileNumber, "", new { @class = "text-danger" })
+                                        </div>
+                                         @{ string itemdate = String.Format("{0:dd/MM/yyyy}", Model.DOB);}
+                                        <div class="form-group" style="margin-bottom:-8px;">
+                                            <label class="form-label">Date of Birth</label>
+                                            <div class="prepend-icon">
+                                                <input  name="DOB" id="DOB" value="@Html.Raw(Html.AttributeEncode(itemdate))" class="date-picker form-control" placeholder="Select a date...">
+                                                <i class="icon-calendar"></i>
+                                                @Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="form-label">Date of Joining</label>
+                                            <div class="prepend-icon">
+                                                @{ string itemdateDOJ = String.Format("{0:dd/MM/yyyy}", Model.DOJ);}
+                                                <input type="text" name="DOJ" id="DOJ" value="@Html.Raw(Html.AttributeEncode(itemdateDOJ))" class="date-picker form-control" placeholder="Select a date...">
+                                                <i class="icon-calendar"></i>
+                                                @Html.ValidationMessageFor(m => m.DOJ, "", new { @class = "text-danger" })
+                                            </div>
                                         </div>
                                         <div class="form-group" style="margin-bottom: 12px;">
                                             <p>
@@ -86,29 +104,33 @@
                                                 </div>
                                             </div>
                                         </div>
-                                         @{ string itemdate = String.Format("{0:dd/MM/yyyy}", Model.DOB);}
-                                        <div class="form-group" style="margin-bottom:-8px;">
-                                            <label class="form-label">Date of Birth</label>
-                                            <div class="prepend-icon">
-                                                <input  name="DOB" id="DOB" value="@Html.Raw(Html.AttributeEncode(itemdate))" class="date-picker form-control" placeholder="Select a date...">
-                                                <i class="icon-calendar"></i>
-                                                @Html.ValidationMessageFor(m => m.DOB, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <label class="form-label">Date of Joining</label>
-                                            <div class="prepend-icon">
-                                                <input type="text" name="DOJ" id="DOJ" value="@Html.Raw(Html.AttributeEncode(Model.DOJ))" class="date-picker form-control" placeholder="Select a date...">
-                                                <i class="icon-calendar"></i>
-                                                @Html.ValidationMessageFor(m => m.DOJ, "", new { @class = "text-danger" })
-                                            </div>
-                                        </div>
                                         @{
                                             string status = (Model.Flag == "YES" ? "checked" : "");
                                         }
                                         <div class="form-group">
                                             <label class="control-label">Status <input name="Flag" value="YES" id="Flag" type="checkbox" style="width: 50px;height: 20px;" @status></label>
                                             @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label">Installment_Method</label>
+                                            <input class="form-control" name="Installment_Method" id="Installment_Method" value="@Html.Raw(Html.AttributeEncode(Model.Installment_Method))" type="text" placeholder="Enter Installment Method">
+                                            @Html.ValidationMessageFor(m => m.Installment_Method, "", new { @class = "text-danger" })
+                                        </div>
+                                        <div class="form-group">
+                                            <p>
+                                                <strong>Photo Upload</strong>
+                                            </p>
+                                            <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                                                <div class="form-control" data-trigger="fileinput">
+                                                    <i class="glyphicon glyphicon-file fileinput-exists"></i><span class="fileinput-filename"></span>
+                                                </div>
+
+                                                <span class="input-group-addon btn btn-default btn-file">
+                                                    <span class="fileinput-new">Choose...</span><span class="fileinput-exists">Change</span>
+                                                    <input type="file" id="file" name="file">
+                                                </span>
+                                                <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+                                            </div>
                                         </div>
                                     </div>
 
@@ -168,28 +190,6 @@
                                         @Html.DropDownList("RolesForAll", (IEnumerable<SelectListItem>)ViewBag.Roles, "Select User Role", htmlAttributes: new { @class = "form-control" })
                                     </div>
                                 }
-
-                                <div class="form-group">
-                                    <p>
-                                        <strong>Photo Upload</strong>
-                                    </p>
-                                    <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                                        <div class="form-control" data-trigger="fileinput">
-                                            <i class="glyphicon glyphicon-file fileinput-exists"></i><span class="fileinput-filename"></span>
-                                        </div>
-
-                                        <span class="input-group-addon btn btn-default btn-file">
-                                            <span class="fileinput-new">Choose...</span><span class="fileinput-exists">Change</span>
-                                            <input type="file" id="file" name="file">
-                                        </span>
-                                        <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="control-label">Installment_Method</label>
-                                    <input class="form-control" name="Installment_Method" id="Installment_Method" value="@Html.Raw(Html.AttributeEncode(Model.Installment_Method))" type="text" placeholder="Enter Installment Method">
-                                    @Html.ValidationMessageFor(m => m.Installment_Method, "", new { @class = "text-danger" })
-                                </div>
                                 <div class="form-group">
                                     <button type="submit" class="btn btn-embossed btn-primary">Save</button>
                                     <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
