--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="admin-themes-lab">
     <meta name="author" content="themes-lab">
-    <link rel="shortcut icon" href="../assets/global/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="~/assets/global/images/favicon.png" type="image/png">
     @*<title>Student Data</title>*@  
-    <link href="../assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet">
+    <link href="~/assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     <link href="~/assets/global/css/style.css" rel="stylesheet" />
     <link href="~/assets/global/css/theme.css" rel="stylesheet"> 
     <link href="~/assets/global/css/ui.css" rel="stylesheet"> 
@@ -19,9 +19,9 @@
     <link href="~/assets/global/plugins/dropzone/dropzone.min.css" rel="stylesheet">
     <link href="~/assets/global/plugins/input-text/style.min.css" rel="stylesheet">
     <script src="~/assets/global/plugins/modernizr/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet">
-    <link href="../assets/global/plugins/rateit/rateit.css" rel="stylesheet">
-    <script src="../assets/global/plugins/modernizr/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <link href="~/assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet">
+    <link href="~/assets/global/plugins/rateit/rateit.css" rel="stylesheet">
+    <script src="~/assets/global/plugins/modernizr/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     <script src="~/Scripts/jquery-1.7.1.min.js"></script>
 </head> 
 
@@ -109,79 +109,79 @@
     <a href="#" class="scrollup"><i class="fa fa-angle-up"></i></a>
 
     <script src="~/assets/global/plugins/jquery/jquery-1.11.1.min.js"></script>
-    <script src="../assets/global/plugins/jquery/jquery-migrate-1.2.1.min.js"></script>
+    <script src="~/assets/global/plugins/jquery/jquery-migrate-1.2.1.min.js"></script>
 
     <script src="~/assets/global/plugins/jquery-ui/jquery-ui-1.11.2.min.js"></script>
-    <script src="../assets/global/plugins/gsap/main-gsap.min.js"></script>
-    <script src="../assets/global/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/global/plugins/bootstrap/js/jasny-bootstrap.min.js"></script>
+    <script src="~/assets/global/plugins/gsap/main-gsap.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap/js/jasny-bootstrap.min.js"></script>
 
-    <script src="../assets/global/plugins/jquery-cookies/jquery.cookies.min.js"></script>
+    <script src="~/assets/global/plugins/jquery-cookies/jquery.cookies.min.js"></script>
     <!-- Jquery Cookies, for theme -->
-    <script src="../assets/global/plugins/jquery-block-ui/jquery.blockUI.min.js"></script>
+    <script src="~/assets/global/plugins/jquery-block-ui/jquery.blockUI.min.js"></script>
     <!-- simulate synchronous behavior when using AJAX -->
-    <script src="../assets/global/plugins/bootbox/bootbox.min.js"></script>
+    <script src="~/assets/global/plugins/bootbox/bootbox.min.js"></script>
     <!-- Modal with Validation -->
-    <script src="../assets/global/plugins/mcustom-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="~/assets/global/plugins/mcustom-scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
     <!-- Custom Scrollbar sidebar -->
-    <script src="../assets/global/plugins/bootstrap-dropdown/bootstrap-hover-dropdown.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap-dropdown/bootstrap-hover-dropdown.min.js"></script>
     <!-- Show Dropdown on Mouseover -->
-    <script src="../assets/global/plugins/charts-sparkline/sparkline.min.js"></script>
+    <script src="~/assets/global/plugins/charts-sparkline/sparkline.min.js"></script>
     <!-- Charts Sparkline -->
-    <script src="../assets/global/plugins/retina/retina.min.js"></script>
+    <script src="~/assets/global/plugins/retina/retina.min.js"></script>
     <!-- Retina Display -->
-    <script src="../assets/global/plugins/select2/select2.min.js"></script>
+    <script src="~/assets/global/plugins/select2/select2.min.js"></script>
     <!-- Select Inputs -->
-    <script src="../assets/global/plugins/icheck/icheck.min.js"></script>
+    <script src="~/assets/global/plugins/icheck/icheck.min.js"></script>
     <!-- Checkbox & Radio Inputs -->
-    <script src="../assets/global/plugins/backstretch/backstretch.min.js"></script>
+    <script src="~/assets/global/plugins/backstretch/backstretch.min.js"></script>
     <!-- Background Image -->
-    <script src="../assets/global/plugins/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- Animated Progress Bar -->
-    <script src="../assets/global/plugins/charts-chartjs/Chart.min.js"></script>
-    <script src="../assets/global/js/builder.js"></script>
+    <script src="~/assets/global/plugins/charts-chartjs/Chart.min.js"></script>
+    <script src="~/assets/global/js/builder.js"></script>
     <!-- Theme Builder -->
-    <script src="../assets/global/js/sidebar_hover.js"></script>
+    <script src="~/assets/global/js/sidebar_hover.js"></script>
     <!-- Sidebar on Hover -->
-    <script src="../assets/global/js/application.js"></script>
+    <script src="~/assets/global/js/application.js"></script>
     <!-- Main Application Script -->
-    <script src="../assets/global/js/plugins.js"></script>
+    <script src="~/assets/global/js/plugins.js"></script>
     <!-- Main Plugin Initialization Script -->
-    <script src="../assets/global/js/widgets/notes.js"></script>
+    <script src="~/assets/global/js/widgets/notes.js"></script>
     <!-- Notes Widget -->
-    <script src="../assets/global/js/quickview.js"></script>
+    <script src="~/assets/global/js/quickview.js"></script>
     <!-- Chat Script -->
-    <script src="../assets/global/js/pages/search.js"></script>
+    <script src="~/assets/global/js/pages/search.js"></script>
     <!-- Search Script -->
     <!-- BEGIN PAGE SCRIPT -->
-    <script src="../assets/global/plugins/switchery/switchery.min.js"></script>
+    <script src="~/assets/global/plugins/switchery/switchery.min.js"></script>
     <!-- IOS Switch -->
-    <script src="../assets/global/plugins/bootstrap-tags-input/bootstrap-tagsinput.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap-tags-input/bootstrap-tagsinput.min.js"></script>
     <!-- Select Inputs -->
-    <script src="../assets/global/plugins/dropzone/dropzone.min.js"></script>
+    <script src="~/assets/global/plugins/dropzone/dropzone.min.js"></script>
     <!-- Upload Image & File in dropzone -->
-    <script src="../assets/global/js/pages/form_icheck.js"></script>
+    <script src="~/assets/global/js/pages/form_icheck.js"></script>
     <!-- Change Icheck Color - DEMO PURPOSE - OPTIONAL -->
     <!-- END PAGE SCRIPTS -->
-    <script src="../assets/global/plugins/touchspin/jquery.bootstrap-touchspin.min.js"></script>
+    <script src="~/assets/global/plugins/touchspin/jquery.bootstrap-touchspin.min.js"></script>
     <!-- A mobile and touch friendly input spinner component for Bootstrap -->
-    <script src="../assets/global/plugins/timepicker/jquery-ui-timepicker-addon.min.js"></script>
+    <script src="~/assets/global/plugins/timepicker/jquery-ui-timepicker-addon.min.js"></script>
     <!-- Time Picker -->
-    <script src="../assets/global/plugins/multidatepicker/multidatespicker.min.js"></script>
+    <script src="~/assets/global/plugins/multidatepicker/multidatespicker.min.js"></script>
     <!-- Multi dates Picker -->
-    <script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
+    <script src="~/assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
     <!-- >Bootstrap Date Picker -->
-    <script src="../assets/global/plugins/bootstrap-datepicker/locales/bootstrap-datepicker.es.min.js"></script>
+    <script src="~/assets/global/plugins/bootstrap-datepicker/locales/bootstrap-datepicker.es.min.js"></script>
     <!-- >Bootstrap Date Picker in Spanish (can be removed if not use) -->
-    <script src="../assets/global/plugins/colorpicker/spectrum.min.js"></script>
+    <script src="~/assets/global/plugins/colorpicker/spectrum.min.js"></script>
     <!-- Color Picker -->
-    <script src="../assets/global/plugins/rateit/jquery.rateit.min.js"></script>
+    <script src="~/assets/global/plugins/rateit/jquery.rateit.min.js"></script>
     <!-- Rating star plugin -->
-    <script src="../assets/global/js/pages/form_plugins.js"></script>
+    <script src="~/assets/global/js/pages/form_plugins.js"></script>
     <!-- END PAGE SCRIPTS -->
-    <script src='../assets/global/plugins/moment/moment.min.js'></script>
-    <script src='../assets/global/plugins/fullcalendar/fullcalendar.min.js'></script>
-    <script src="../assets/admin/layout1/js/layout.js"></script>
-    <script src="../assets/global/js/pages/fullcalendar.js"></script>
+    <script src="~/assets/global/plugins/moment/moment.min.js"></script>
+    <script src="~/assets/global/plugins/fullcalendar/fullcalendar.min.js"></script>
+    <script src="~/assets/admin/layout1/js/layout.js"></script>
+    <script src="~/assets/global/js/pages/fullcalendar.js"></script>
 </body>
 </html>
