--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/Home.cshtml
@@ -95,8 +95,8 @@
                                         <i class="fa fa-support fa-5x"></i>
                                     </div>
                                     <div class="col-xs-7 text-right">
-                                        <div class="huge">@ViewBag.Event</div>
-                                        <div>Text</div>
+                                        <div class="huge">@ViewBag.RenewMemberCount</div>
+                                        <div>Renew Member List</div>
                                     </div>
                                 </div>
                             </div>
