--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/AdminMaster.cshtml
@@ -10,7 +10,7 @@
     <meta name="description" content="admin-themes-lab">
     <meta name="author" content="themes-lab">
     <link rel="shortcut icon" href="~/assets/global/images/favicon.png" type="image/png">
-    @*<title>Student Data</title>*@  
+    <title>EON FITNESS EMPIRE</title>  
     <link href="~/assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet">
     <link href="~/assets/global/css/style.css" rel="stylesheet" />
     <link href="~/assets/global/css/theme.css" rel="stylesheet"> 
