--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/BasicMaster.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/BasicMaster.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Themes Lab - Creative Laborator</title>
+    <title>EON FITNESS EMPIRE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="" name="description" />
     <meta content="themes-lab" name="author" />
