--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@if (User.IsInRole("A"))
 {
     <li><a href="/admin/home"><i class="icon-home"></i><span>Dashboard</span></a></li>
-    <li><a href="/admin/MemberListForAdmin"><i class="icon-users"></i><span>Member List</span></a></li>
+    <li><a href="/admin/MemberSearch"><i class="icon-users"></i><span>Member List</span></a></li>
     <li><a href="/admin/MemberRegistration"><i class="icon-users"></i><span>Member Registration</span></a></li>
     <li><a href="/admin/UserLoginList"><i class="icon-users"></i><span>User Login List</span></a></li>
     <li><a href="/admin/PackageListForAdmin"><i class="fa fa-rupee"></i><span>Package Details List</span></a></li>
