--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberProfileDetails.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberProfileDetails.cshtml
@@ -106,10 +106,10 @@
                                         <td><strong>Gender:</strong></td>
                                         <td style="padding-right: 143px;">@Html.DisplayFor(model => model.Gender)</td>
                                     </tr>
-                                    <tr style="font-size:15px;">
+                                    @*<tr style="font-size:15px;">
                                         <td><strong>Installment Method:</strong></td>
                                         <td style="padding-right:98px;">@Html.DisplayFor(model => model.Installment_Method)</td>
-                                    </tr>
+                                    </tr>*@
                                     <tr style="font-size:15px;">
                                         <td><strong>Package Month:</strong></td>
                                         <td style="padding-right:98px;">@Html.DisplayFor(model => model.PackageDetail.Pkg_Month)</td>
