--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberSearch.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberSearch.cshtml
@@ -22,7 +22,7 @@
             <div class="panel-heading">
                 Search Member
             </div>
-            <form id="AddData" action="">                
+            <form id="AddData" action="/Admin/MemberSearch" method="post">     @*action="/Admin/MemberSearch" method="post"*@            
                 <div class="panel-content">
                     <div class="row">
                         <div class="col-md-12">
