--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberEditData.cshtml
@@ -111,17 +111,17 @@
                                             <label class="control-label">Status <input name="Flag" value="YES" id="Flag" type="checkbox" style="width: 50px;height: 20px;" @status></label>
                                             @Html.ValidationMessageFor(m => m.Flag, "", new { @class = "text-danger" })
                                         </div>
-                                        <div class="form-group">
+                                        @*<div class="form-group">
                                             <label class="control-label">Installment_Method</label>
                                             <input class="form-control" name="Installment_Method" id="Installment_Method" value="@Html.Raw(Html.AttributeEncode(Model.Installment_Method))" type="text" placeholder="Enter Installment Method">
                                             @Html.ValidationMessageFor(m => m.Installment_Method, "", new { @class = "text-danger" })
-                                        </div>
+                                        </div>*@
                                         <div class="form-group">
                                             <p>
                                                 <strong>Photo Upload</strong>
                                             </p>
                                             <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                                                <div class="form-control" data-trigger="fileinput">
+                                                <div class="form-control" data-trigger="fileinput" style="z-index: 0;">
                                                     <i class="glyphicon glyphicon-file fileinput-exists"></i><span class="fileinput-filename"></span>
                                                 </div>
 
@@ -166,7 +166,7 @@
                                             <input class="form-control" name="EmergencyContactNumber" id="EmergencyContactNumber" value="@Html.Raw(Html.AttributeEncode(Model.EmergencyContactNumber))" type="text" placeholder="Enter Emergency Contact Number">
                                             @Html.ValidationMessageFor(m => m.EmergencyContactNumber, "", new { @class = "text-danger" })
                                         </div>
-                                        <div class="form-group">
+                                        @*<div class="form-group">
                                             <label>Select Package</label>
                                             @Html.DropDownList("Package_ID", FinalName, "Select Package", htmlAttributes: new { @class = "form-control" })
 
@@ -179,7 +179,7 @@
 
                                             @Html.ValidationMessageFor(model => model.Payment_Type_ID, "", new { @class = "text-danger" })
 
-                                        </div>
+                                        </div>*@
 
                                     </div>
                                 </div>
