--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Member/RegistrationByMember.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Member/RegistrationByMember.cshtml
@@ -150,30 +150,17 @@
 
                                                 @Html.ValidationMessageFor(model => model.Package_ID, "", new { @class = "text-danger" })
                                             </div>
-                                            <div class="form-group">
-                                                <label>Payment Type</label>
-                                                @Html.DropDownList("Payment_Type_ID", PaymentName, "Select Payment Type", htmlAttributes: new { @class = "form-control" })
-
-                                                @Html.ValidationMessageFor(model => model.Payment_Type_ID, "", new { @class = "text-danger" })
-
-                                            </div>
+                                            
 
                                         </div>
                                     </div>
-                                    @*@if (ViewBag.Roles != null)
-                                        {
-                                            <div class="form-group">
-                                                <label>Select User Role</label>
-                                                @Html.DropDownList("RolesForAll", (IEnumerable<SelectListItem>)ViewBag.Roles, "Select User Role", htmlAttributes: new { @class = "form-control" })
-                                            </div>
-                                        }*@
 
                                     <div class="form-group">
                                         <p>
                                             <strong>Photo Upload</strong>
                                         </p>
                                         <div class="fileinput fileinput-new input-group" data-provides="fileinput">
-                                            <div class="form-control" data-trigger="fileinput">
+                                            <div class="form-control" data-trigger="fileinput" style="z-index: 0;">
                                                 <i class="glyphicon glyphicon-file fileinput-exists"></i><span class="fileinput-filename"></span>
                                             </div>
 
@@ -183,11 +170,6 @@
                                             </span>
                                             <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
                                         </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label">Installment_Method</label>
-                                        <input class="form-control" name="Installment_Method" id="Installment_Method" type="text" placeholder="Enter Installment Method">
-                                        @Html.ValidationMessageFor(m => m.Installment_Method, "", new { @class = "text-danger" })
                                     </div>
                                     <div class="form-group">
                                         <button type="submit" class="btn btn-embossed btn-primary">Save</button>
