Sagar - Check in Transaction Collection details + Columns added

--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberPayment.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Admin/MemberPayment.cshtml
@@ -58,7 +58,11 @@
                                                     <input type="text" name="PackageEndDate" id="PackageEndDate" class="date-picker form-control" placeholder="Select a date...">
                                                     <i class="icon-calendar"></i>
                                                 </div>
-                                            </div>                                                                                     
+                                            </div>     
+                                            <div class="form-group" style="margin-top:40px;">
+                                                <button type="submit" class="btn btn-embossed btn-primary">Make Payment</button>
+                                                <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
+                                            </div>                                                                                
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
@@ -73,17 +77,18 @@
                                                 <label class="control-label">Due Amount</label>
                                                 <input class="form-control" type="number" name="Due_Amount" id="Due_Amount" placeholder="Enter Due Amount">
                                             </div>
-                                            <div class="form-group" style="margin-bottom:-8px;">
+                                            <div class="form-group">
                                                 <label class="form-label">Next Payment Date</label>
                                                 <div class="prepend-icon">
                                                     <input type="text" name="NextPaymentDate" id="NextPaymentDate" class="date-picker form-control" placeholder="Select a date...">
                                                     <i class="icon-calendar"></i>
                                                 </div>
-                                            </div>                                           
-                                            <div class="form-group" style="margin-top:40px;">
-                                                <button type="submit" class="btn btn-embossed btn-primary">Make Payment</button>
-                                                <button type="Reset" class="btn btn-embossed btn-primary">Cancel</button>
-                                            </div>
+                                            </div> 
+                                            <div class="form-group">
+                                                <label class="control-label">Discount Amount</label>
+                                                <input class="form-control" type="number" name="Discount_Amount" id="Discount_Amount" placeholder="Enter Discount Amount">
+                                            </div>                                        
+                                            
                                         </div>
 
                                     </div>
