--- a/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
+++ b/EONFITNESSEMPIRE/MyProject/MyProject/Views/Shared/SidebarPartial.cshtml
@@ -3,6 +3,7 @@
     <li><a href="/admin/home"><i class="icon-home"></i><span>Dashboard</span></a></li>
     <li><a href="/admin/MemberSearch"><i class="icon-users"></i><span>Member List</span></a></li>
     <li><a href="/admin/MemberRegistration"><i class="icon-users"></i><span>Member Registration</span></a></li>
+    <li><a href="/admin/PaymentCollection"><i class="fa fa-rupee"></i><span>Payment Collection</span></a></li>
     <li><a href="/admin/UserLoginList"><i class="icon-users"></i><span>User Login List</span></a></li>
     <li><a href="/admin/PackageListForAdmin"><i class="fa fa-rupee"></i><span>Package Details List</span></a></li>
 }
